--- a/website/static/index.html
+++ b/website/static/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-	<script src="/static/vendors/angular.min.js"></script>
-	<script src="/static/vendors/angular-route.min.js"></script>
-	
-	<script src="/static/js/app.js"></script>
-	<script src="/static/js/factory.js"></script>
-	<script src="/static/js/controller.js"></script>
+	<script src="static/vendors/angular.min.js"></script>
+	<script src="static/vendors/angular-route.min.js"></script>
+	<script src="static/js/app.js"></script>
+	<script src="static/js/factory.js"></script>
+	<script src="static/js/controller.js"></script>
 
-	<link rel="stylesheet" href="/static/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/static/css/global.css">
+	<link rel="stylesheet" href="/app/static/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/app/static/css/global.css">
 	<link rel="icon" type="image/png" href="/static/images/favicon-32x32.png"/>
 </head>
 <header>
